k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: app
          image: cr.yandex/<registry-id>/test-app:latest  # Тег заменяется в CI/CD
          ports:
            - containerPort: 80
